test07/results/test_marektomka.err
  File "/home/gejza/vyuka/l2021/ps/zadanie1/tests/test07/../../riesenia/marektomka/mboxer/mboxer.py", line 95
    with open(f'{headers["Mailbox"]}/{}','r') as message: # tu neviem co dat za / 
                                        ^
SyntaxError: f-string: empty expression not allowed
Traceback (most recent call last):
  File "/home/gejza/vyuka/l2021/ps/zadanie1/tests/test07/test.py", line 164, in <module>
    s.connect(('localhost',9999))
ConnectionRefusedError: [Errno 111] Connection refused
